--- a/index.css
+++ b/index.css
@@ -30,10 +30,10 @@ header{
     z-index: inherit;
     /* margin-bottom: 20pt; */
     /* vertical-align: middle; */
-    bottom:10pt;
+    bottom:2vh;
     padding:15px;
     width: 280pt;
-    height: 71.5em;
+    height: 92vh;
     position: absolute;
     background-color: #09090fa2;
     /* display: flex;
@@ -47,15 +47,17 @@ header{
 #buttons{
     z-index: 3;
     width:275pt;
-    height: 30em;
+    height:85vh;
     float: left;
     display: flex;
     flex-direction: column;
     align-items: space-around;
+    flex:1
 }
 #buttons>button{
-    /* position: absolute; */
+    position: relative;
     color:#ceceeb7c;
+    left: 0pt;
     /* text-indtexent: 0pt; */
     font-family: 'Roboto Mono';
     font-weight: 200;
@@ -64,11 +66,87 @@ header{
     background-color: #80000000;
     border: 0px solid;
     text-align: right;
+    margin-top:1em;
 }
 #buttons>button:hover{
-    transition-property: background-color;
+    transition-property: left;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
-    background-color: rgb(95, 95, 95);
+    left: -5pt;
 
+}
+#spacer{
+    flex-grow: 0.9;
+    /* height:auto; */
+
+}
+#contact{
+    margin-top: auto;
+}
+#entrydisplay{
+    /* border: 1px solid white; */
+    height:84vh;
+    width: 75vw;
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    flex:1;
+    align-items:baseline;
+    left: 2em;
+    padding-left:50pt;
+    padding-top:0px;
+    
+}
+#entrydisplay>button{
+    text-align: left;
+    padding: 5pt;
+    width: inherit;
+    padding-left: 20pt;
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    font-style: italic;
+    font-size: 28pt;
+    background-color: #80000000;
+    border: 0px solid;
+    border-radius:15px;
+    position: relative;
+    color:#ceceeb7c;
+    text-transform: uppercase;
+    margin-top:1em;
+
+
+}
+#entrydisplay>button:hover{
+    transition-property: top, background-color;
+    transition-duration: 0.25s;
+    transition-timing-function: ease-out;
+    top: -5pt;
+    background-color:#3f3f54;
+    /* mix-blend-mode: ; */
+}
+label{
+    background-color: #80000000;
+    color:#ceceeb9f;
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    font-style: italic;
+    font-size: 28pt;
+
+}
+#sort{
+    background-color: #80000000;
+    color:#ceceeb9f;
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    font-style: italic;
+    font-size: 28pt;
+    border: 0px solid;
+}
+option{
+    appearance: none;
+    background-color: #80000000;
+    color:#ceceeb9f;
+    font-family: 'Roboto Mono';
+    font-weight: 200;
+    font-style: italic;
 }
